--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 
-static/ckeditor linguist-vendored
+static/ckeditor/* linguist-vendored
 
 *.js linguist-vendored=false
 *.py linguist-vendored=false
