--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-
-* linguist-vendored
+static/ckeditor/* linguist-vendored
 *.css linguist-detectable=false
 *.js linguist-vendored=false
 *.py linguist-vendored=false
