--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 static/ckeditor/* linguist-vendored
+/static/vendor/* linguist-vendored
 *.css linguist-detectable=false
 *.js linguist-vendored=false
 *.py linguist-vendored=false
