--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 static/ckeditor/* linguist-vendored
 *.css linguist-vendored
+Doc/* linguist-documentation
+static/*.html linguist-detectable=false
 static/ckeditor/*.html linguist-vendored
