--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 static/ckeditor/* linguist-vendored
 *.css linguist-vendored
 Doc/* linguist-documentation
-static/*.html linguist-detectable=false
+*.html linguist-vendored
 static/ckeditor/*.html linguist-vendored
