--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@ static/ckeditor/* linguist-vendored
 static/* linguist-vendored
 *.css linguist-vendored
 /Doc/* linguist-documentation
-*.html linguist-language=Python
+#*.html linguist-language=Python
 /static/*.html linguist-vendored
