--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@ static/ckeditor/* linguist-vendored
 static/* linguist-vendored
 *.css linguist-vendored
 /Doc/* linguist-documentation
-/static/*.html linguist-vendored
+/static/*.html linguist-detectable=false
