--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ static/* linguist-vendored
 *.css linguist-vendored
 /Doc/* linguist-documentation
 /static/*.html linguist-detectable=false
+*.html linguist-language=Python
