--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ local_settings.py
 #db.sqlite3
 db.sqlite3-journal
 #media
-
+APTRS/debug.txt
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -173,3 +173,17 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+#db.sqlite3
+Features.txt
+#db.sqlite3
+migrations/
+**/migrations/*
+**/migrations/
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+APTRS/project/migrations/0001_initial.py
+APTRS/customers/migrations/__init__.py
+APTRS/project/migrations/0001_initial.py
+APTRS/vulnerability/migrations/0001_initial.py
+APTRS/vulnerability/migrations/0001_initial.py
