--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1;python_version<"3.9"
-Django==4.1.2
+Django==4.1.10
 django-ckeditor==6.5.1
 django-js-asset==2.0.0
 django-pdfkit==0.3.1
 django-phonenumber-field==7.0.0
 django-phonenumbers==1.0.1
+djangorestframework==3.14.0
 gunicorn==20.1.0
 pdfkit==0.6.0
 phonenumbers==8.12.57
-Pillow==9.2.0
+Pillow==9.4.0
 PyPDF2==2.11.1
+pytz==2022.6
 sqlparse==0.4.3
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 tzdata==2022.5
 waitress==2.1.2
+django-cors-headers==3.13.0
+djangorestframework-simplejwt==5.2.2
+colorlog==6.7.0
