--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ local_settings.py
 db.sqlite3-journal
 #media
 APTRS/debug.txt
+APTRS/debug.log
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -187,3 +188,8 @@ APTRS/customers/migrations/__init__.py
 APTRS/project/migrations/0001_initial.py
 APTRS/vulnerability/migrations/0001_initial.py
 APTRS/vulnerability/migrations/0001_initial.py
+
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+APTRS/project/migrations/0001_initial.py
