--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,6 @@ APTRS/vulnerability/migrations/0001_initial.py
 !**/migrations
 !**/migrations/__init__.py
 APTRS/project/migrations/0001_initial.py
+APTRS/static/admin/**
+APTRS/static/ckeditor/**
+APTRS/static/rest_framework/**
