--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ,'API']
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main",'API' ]
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9, '3.10', 3.11,3.12]
+        python-version: [3.8, 3.9, 3.10, 3.11,3.12]
 
     steps:
     - uses: actions/checkout@v3
