--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: Setup ${{ matrix.python }} ${{ matrix.os }}
+    runs-on:  ${{ matrix.os }}
     strategy:
       max-parallel: 4
       matrix:
+        os: [macos-latest, windows-latest, ubuntu-20.04, ubuntu-22.04]
         python-version: [3.8, 3.9, 3.10, 3.11,3.12]
 
     steps:
