--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 4
       matrix:
         os: [macos-latest, windows-latest, ubuntu-20.04, ubuntu-22.04]
-        python-version: [3.8, 3.9, 3.10, 3.11,3.12]
+        python-version: [3.8, 3.9, 3.11,3.12]
 
     steps:
     - uses: actions/checkout@v3
