--- a/.github/workflows/snyk-infrastructure.yml
+++ b/.github/workflows/snyk-infrastructure.yml
@@ -14,10 +14,10 @@ name: Snyk Infrastructure as Code
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , 'API']
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    branches: [ "main" ,'API']
   schedule:
     - cron: '30 19 * * 4'
 
