--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,9 +23,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
+      if: matrix.os != 'windows-latest'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python APTRS/manage.py test
+
+    - name: Run install.bat on Windows
+      if: matrix.os == 'windows-latest'
+      run: install.bat
+   
