--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,5 +30,5 @@ jobs:
 
     - name: Run install.bat on Windows
       if: matrix.os == 'windows-latest'
-      run: install.bat
+      run: cmd /c "install.bat"
    
