--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,8 +25,7 @@ jobs:
     - name: Install Dependencies
       if: matrix.os != 'windows-latest'
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        bash install.sh
 
     - name: Run install.bat on Windows
       if: matrix.os == 'windows-latest'
