--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,10 +22,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      if: matrix.os != 'windows-latest'
-      run: |
-        bash install.sh
+    - name:  Run install.sh on Linux
+      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
+      run: bash install.sh
 
     - name: Run install.bat on Windows
       if: matrix.os == 'windows-latest'
