--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: setup environment
+      run: echo "${{ secrets.ENV_FILE }}" > APTRS/.env
     - name:  Run install.sh on Linux
       if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
       run: bash install.sh
