--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,9 +26,13 @@ jobs:
       run: echo "${{ secrets.ENV_FILE }}" > APTRS/.env
     - name:  Run install.sh on Linux
       if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
-      run: bash install.sh
+      run: 
+        bash install.sh
+        python3 APTRS/manage.py test
 
     - name: Run install.bat on Windows
       if: matrix.os == 'windows-latest'
-      run: cmd /c "install.bat"
+      run: 
+        cmd /c "install.bat"
+        python manage.py test
    
