--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,15 +24,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: setup environment
       run: echo "${{ secrets.ENV_FILE }}" > APTRS/.env
-    - name:  Run install.sh on Linux
+    - name:  Run install.sh and test on Linux
       if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
-      run: 
+      run: |
         bash install.sh
         python3 APTRS/manage.py test
 
-    - name: Run install.bat on Windows
+    - name: Run install.bat and test on Windows
       if: matrix.os == 'windows-latest'
-      run: 
+      run: |
         cmd /c "install.bat"
         python manage.py test
    
