--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-20.04, ubuntu-22.04]
+        os: [windows-latest, ubuntu-20.04, ubuntu-22.04]
         python-version: [3.8, 3.9, 3.11,3.12]
 
     steps:
@@ -35,9 +35,8 @@ jobs:
     - name: Run install.bat and test on Windows
       if: matrix.os == 'windows-latest'
       run: |
-        sc config "GitHubActionsRunner" obj= "NT AUTHORITY\SYSTEM" type= own
         powershell Invoke-WebRequest -Uri 'https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe' -OutFile 'gtk-installer.exe'
-        powershell Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S'
+        powershell Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S'  -RunAsAdmin
         cmd /c "install.bat"
         cd APTRS
         .\venv\Scripts\activate
