--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,11 +35,17 @@ jobs:
     - name: Run install.bat and test on Windows
       if: matrix.os == 'windows-latest'
       run: |
-        echo 'Invoke-WebRequest -Uri ''https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe'' -OutFile ''gtk-installer.exe''' >> script.ps1
-        echo 'Start-Process -Wait -FilePath ''.\\gtk-installer.exe'' -ArgumentList ''/S'' -Verb RunAs' >> script.ps1
+        echo Invoke-WebRequest -Uri 'https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe' -OutFile 'gtk-installer.exe' >> script.ps1
+        echo Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S' >> script.ps1
         ./script.ps1 -RunAsAdmin
         cmd /c "install.bat"
         cd APTRS
         .\venv\Scripts\activate
         python manage.py test
    
+
+
+
+
+
+        
