updated codde quality

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.organization=anof-cyber
 sonar.projectName=APTRS
 sonar.sources=.
 sonar.python.version=3.8,3.10
+sonar.exclusions=APTRS/static/**/*,APTRS/templates/**/*
+
