--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
             python-version: ${{ matrix.python }}
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Run tox
+      - name: Install coverage
+        run: pip install coverage
+      - name: Run coverage
         run: | 
           pip install -r requirements.txt
-          tox -e py
+          coverage run APTRS/manage.py test
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
