--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,10 @@ jobs:
         run: pip install coverage
       - name: Run coverage
         run: | 
-          pip install -r requirements.txt
-          coverage run APTRS/manage.py test
+          bash install.sh
+          cd APTRS
+          source venv/bin/activate
+          coverage run manage.py test
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
