--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -49,7 +49,10 @@ jobs:
         $modifiedContent = $linesToAdd + $content
         $modifiedContent | Out-File -FilePath $filePath -Encoding utf8
         Get-Content APTRS/project/report.py
-        cmd /c "install.bat"
+        "C:\Program Files\GTK3-Runtime Win64\bin\" | Out-File -FilePath $env:GITHUB_PATH -Append
+
+        Start-Process -FilePath "install.bat" -NoNewWindow -Wait
+
         cd APTRS
         
         .\venv\Scripts\activate
