--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,6 +50,8 @@ jobs:
         $modifiedContent | Out-File -FilePath $filePath -Encoding utf8
         Get-Content APTRS/project/report.py
         "C:\Program Files\GTK3-Runtime Win64\bin\" | Out-File -FilePath $env:GITHUB_PATH -Append
+        gtk-update-icon-cache --help
+
 
         Start-Process -FilePath "install.bat" -NoNewWindow -Wait
 
