--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,6 +43,8 @@ jobs:
         $filePath = "APTRS/project/report.py"
         $linesToAdd = @'
         import os
+        GTK_FOLDER = r'C:\Program Files\GTK3-Runtime Win64\bin'
+        os.environ['PATH'] = GTK_FOLDER
         os.add_dll_directory(r"C:\Program Files\GTK3-Runtime Win64\bin")
         '@
         $content = Get-Content -Path $filePath -Raw
@@ -50,7 +52,7 @@ jobs:
         $modifiedContent | Out-File -FilePath $filePath -Encoding utf8
         Get-Content APTRS/project/report.py
         "C:\Program Files\GTK3-Runtime Win64\bin\" | Out-File -FilePath $env:GITHUB_PATH -Append
-        gtk-update-icon-cache --help
+        
 
 
         Start-Process -FilePath "install.bat" -NoNewWindow -Wait
