--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,7 @@ jobs:
         Get-Content script.ps1
         ./script.ps1 -RunAsAdmin
         $filePath = "APTRS/project/report.py"
-        python -C "import os; GTK_FOLDER = r'C:\Program Files\GTK3-Runtime Win64\bin';os.environ['PATH'] = GTK_FOLDER + os.pathsep + os.environ.get('PATH', '') "
+        python -c "import os; GTK_FOLDER = r'C:\Program Files\GTK3-Runtime Win64\bin';os.environ['PATH'] = GTK_FOLDER + os.pathsep + os.environ.get('PATH', '') "
         $linesToAdd = @'
         import os
         
