--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,10 +41,8 @@ jobs:
         Get-Content script.ps1
         ./script.ps1 -RunAsAdmin
         $filePath = "APTRS/project/report.py"
-        python -c "import os; GTK_FOLDER = r'C:\Program Files\GTK3-Runtime Win64\bin';os.environ['PATH'] = GTK_FOLDER + os.pathsep + os.environ.get('PATH', '') "
         $linesToAdd = @'
         import os
-        
         os.add_dll_directory(r"C:\Program Files\GTK3-Runtime Win64\bin")
         '@
         $content = Get-Content -Path $filePath -Raw
@@ -52,7 +50,7 @@ jobs:
         $modifiedContent | Out-File -FilePath $filePath -Encoding utf8
         Get-Content APTRS/project/report.py
         "C:\Program Files\GTK3-Runtime Win64\bin\" | Out-File -FilePath $env:GITHUB_PATH -Append
-        
+        C:\Program Files\GTK3-Runtime Win64\bin\gtk-update-icon-cache --help
 
 
         Start-Process -FilePath "install.bat" -NoNewWindow -Wait
