--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,7 +50,7 @@ jobs:
         $modifiedContent | Out-File -FilePath $filePath -Encoding utf8
         Get-Content APTRS/project/report.py
         "C:\Program Files\GTK3-Runtime Win64\bin\" | Out-File -FilePath $env:GITHUB_PATH -Append
-        "C:\Program Files\GTK3-Runtime Win64\bin\gtk-update-icon-cache.exe" "--help"
+        C:\Program Files\GTK3-Runtime Win64\bin\gtk-update-icon-cache.exe" --help
 
 
         Start-Process -FilePath "install.bat" -NoNewWindow -Wait
