--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -49,6 +49,7 @@ jobs:
         msys2 -c  "pacman -S mingw-w64-ucrt-x86_64-gtk3"
         msys2 -c  "pacman -S mingw-w64-x86_64-python-gobject"
         echo "WEASYPRINT_DLL_DIRECTORIES=C:\Program Files\GTK3-Runtime Win64\bin" | Out-File -FilePath $env:GITHUB_ENV -Append
+        echo "${{ env.WEASYPRINT_DLL_DIRECTORIES }}" 
         cmd /c "install.bat"
         cd APTRS
         
