--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -55,7 +55,9 @@ jobs:
         git clone $repoUrl
         echo "$GITHUB_WORKSPACE/GTK-for-Windows-Runtime-Environment-Installer/gtk-nsis-pack/bin" >> $GITHUB_PATH
         echo "$GITHUB_WORKSPACE/GTK-for-Windows-Runtime-Environment-Installer/gtk-nsis-pack/bin" | Out-File -FilePath $env:GITHUB_PATH -Append
-        echo $GITHUB_WORKSPACE
+        echo "${GITHUB_WORKSPACE}/GTK-for-Windows-Runtime-Environment-Installer/gtk-nsis-pack/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+        echo ${GITHUB_WORKSPACE}
 
         cmd /c "install.bat"
         cd APTRS
