fixed path error

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -32,7 +32,8 @@ jobs:
         python -c "import os;os.environ['WEASYPRINT_DLL_DIRECTORIES'] = r'C:\Program Files\GTK3-Runtime Win64\bin'"
         C:\\msys64\\msys2_shell.cmd -defterm -no-start -mingw64 -c "pacman --noconfirm -S mingw-w64-x86_64-gtk3"
         echo "C:\\msys64\\mingw64\\bin" >> $GITHUB_PATH
-        python -c 'import os; os.environ["PATH"] = r"C:\\msys64\\mingw64\\bin"; print(os.environ)'
+        python -c "import os; os.environ['PATH'] = r'C:\\msys64\\mingw64\\bin'; print(os.environ)"
+
 
       env:
           ENV_SECRET: ${{ secrets.WEASYPRINT_DLL_DIRECTORIES }} 
