--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -63,8 +63,10 @@ jobs:
         cmd /c "install.bat"
         cd APTRS
         
-        cmd /c ".\venv\Scripts\activate"
-        python manage.py test
+        #cmd /c ".\venv\Scripts\activate"
+        #python manage.py test
+        cmd /c ".\venv\Scripts\activate && python manage.py test"
+
    
 
 
