--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -60,13 +60,19 @@ jobs:
         
         Get-Content script.ps1
         ./script.ps1 -RunAsAdmin
-        cmd /c "install.bat"
         cd APTRS
+        for /f %%i in ('python -c "import secrets; print(secrets.token_hex(24))"') do set "NEW_SECRET_KEY=%%i"
+        set "PYTHON_CODE=import os; import dotenv; dotenv_file = dotenv.find_dotenv(); dotenv.load_dotenv(dotenv_file); os.environ['SECRET_KEY'] = '%NEW_SECRET_KEY%'; dotenv.set_key(dotenv_file, 'SECRET_KEY', os.environ['SECRET_KEY'])"
+        python -c "%PYTHON_CODE%"
+        python manage.py makemigrations
+        python manage.py makemigrations accounts
+        python manage.py makemigrations project
+        python manage.py migrate
+        python manage.py migrate accounts 
+        python manage.py FirstSetup
         
-        #cmd /c ".\venv\Scripts\activate"
-        #python manage.py test
-        cmd /c ".\venv\Scripts\activate && python manage.py test"
-
+        python manage.py test
+        
    
 
 
