--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -61,9 +61,7 @@ jobs:
         Get-Content script.ps1
         ./script.ps1 -RunAsAdmin
         cd APTRS
-        for /f %%i in ('python -c "import secrets; print(secrets.token_hex(24))"') do set "NEW_SECRET_KEY=%%i"
-        set "PYTHON_CODE=import os; import dotenv; dotenv_file = dotenv.find_dotenv(); dotenv.load_dotenv(dotenv_file); os.environ['SECRET_KEY'] = '%NEW_SECRET_KEY%'; dotenv.set_key(dotenv_file, 'SECRET_KEY', os.environ['SECRET_KEY'])"
-        python -c "%PYTHON_CODE%"
+        del db.sqlite3
         python manage.py makemigrations
         python manage.py makemigrations accounts
         python manage.py makemigrations project
