--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -55,13 +55,15 @@ jobs:
     
       if: matrix.os == 'windows-latest'
       run: |
-        echo "Invoke-WebRequest -Uri 'https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe' -OutFile 'gtk-installer.exe'" >> script.ps1
-        echo "Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S'" >> script.ps1
+        #echo "Invoke-WebRequest -Uri 'https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe' -OutFile 'gtk-installer.exe'" >> script.ps1
+        #echo "Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S'" >> script.ps1
         
-        Get-Content script.ps1
-        ./script.ps1 -RunAsAdmin
-        install.bat
-        .\venv\Scripts\activate
+        #Get-Content script.ps1
+        #./script.ps1 -RunAsAdmin
+        cmd /c "install.bat"
+        cd APTRS
+        
+        cmd .c .\venv\Scripts\activate
         python manage.py test
    
 
