--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os: [windows-latest, ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04]
         python-version: [3.8, 3.9, 3.11,3.12]
 
     steps:
@@ -28,20 +28,6 @@ jobs:
     - name: setup environment
       run: | 
         echo "${{ secrets.ENV_FILE }}" > APTRS/.env
-        echo "${GITHUB_WORKSPACE}/GTK-for-Windows-Runtime-Environment-Installer/gtk-nsis-pack/bin" >> $GITHUB_ENV
-        python -c "import os;os.environ['WEASYPRINT_DLL_DIRECTORIES'] = r'C:\Program Files\GTK3-Runtime Win64\bin'"
-        C:\\msys64\\msys2_shell.cmd -defterm -no-start -mingw64 -c "pacman --noconfirm -S mingw-w64-x86_64-gtk3"
-        echo "C:\\msys64\\mingw64\\bin" >> $GITHUB_PATH
-        "WEASYPRINT_DLL_DIRECTORIES=C:\\msys64\\mingw64\\bin" | Out-File -FilePath $env:GITHUB_ENV -Append
-        "C:\\msys64\\mingw64\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        "C:\\msys64\\mingw64\\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
-        python -c "import os; os.environ['PATH'] = r'C:\\msys64\\mingw64\\bin'; print(os.environ)"
-
-
-
-
-      env:
-          ENV_SECRET: ${{ secrets.WEASYPRINT_DLL_DIRECTORIES }} 
           
     - name:  Run install.sh and test on Linux
       if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
@@ -50,21 +36,6 @@ jobs:
         cd APTRS
         source venv/bin/activate
         python3 manage.py test
-
-    - name: Run install.bat and test on Windows
-    
-      if: matrix.os == 'windows-latest'
-      run: |
-        #echo "Invoke-WebRequest -Uri 'https://github.com/tschoonj/GTK-for-Windows-Runtime-Environment-Installer/releases/download/2022-01-04/gtk3-runtime-3.24.31-2022-01-04-ts-win64.exe' -OutFile 'gtk-installer.exe'" >> script.ps1
-        #echo "Start-Process -Wait -FilePath '.\gtk-installer.exe' -ArgumentList '/S'" >> script.ps1
-        
-        #Get-Content script.ps1
-        #./script.ps1 -RunAsAdmin
-        cmd /c "python -m pip install -r requirements.txt"
-        cmd /c "cd APTRS"        
-        cmd /c "python manage.py test"   
-
-
 
 
 
