Added url validation and env for Company logo

--- a/APTRS/.env
+++ b/APTRS/.env
@@ -8,4 +8,7 @@ ADMIN = True
 PASSWORD = 'iamweakpassword'
 Group = 'Administrator'
 YOUR_COMPANY = 'AnoF PVT LTD'
+YOUR_COMPANY_LOGO = 'APTRS.png'  ## You company logo will be on report, make sure the image file is present in APTRS/static/media/company/ folder, If not required keep None
 LOG_FILE_LOCATION = './debug.log'  ### Provivde the full path to the log file if required /var/tml/log/aptrs.log or C:/Users/<user>/.aptrs.log
+WHITELIST_IP='["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech"]'  ### Make sure to whitelist the IP/domain to only allow whitelisted domain to generate report to prevent SSRF vulnerability, make sure to keep the IP/domain of APTRS as static file and images will be loaded from APTRS serer IP
+
