Allowed host header and CORS from env

--- a/APTRS/.env
+++ b/APTRS/.env
@@ -11,4 +11,5 @@ YOUR_COMPANY = 'AnoF PVT LTD'
 YOUR_COMPANY_LOGO = 'APTRS.png'  ## You company logo will be on report, make sure the image file is present in APTRS/static/media/company/ folder, If not required keep None
 LOG_FILE_LOCATION = './debug.log'  ### Provivde the full path to the log file if required /var/tml/log/aptrs.log or C:/Users/<user>/.aptrs.log
 WHITELIST_IP='["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech"]'  ### Make sure to whitelist the IP/domain to only allow whitelisted domain to generate report to prevent SSRF vulnerability, make sure to keep the IP/domain of APTRS as static file and images will be loaded from APTRS serer IP
-
+ALLOWED_HOST = '["127.0.0.1","localhost","aptrsapi.souravkal.tech","*"]'   ### Make sure to change the value according to your host to prevent Host header and this can lead to SSRF on PDF generation, only alloed valid ip or domain 
+CORS_ORIGIN = '["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech","http://127.0.0.1:5000"]'
