--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    env:
+      WHITELIST_IP: '["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech", "http://127.0.0.1:8000"]'
+      ALLOWED_HOST: '["127.0.0.1","localhost","aptrsapi.souravkal.tech","*"]'
+      CORS_ORIGIN: '["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech","http://127.0.0.1:5000"]'
+
     steps:
       - uses: actions/checkout@v3
         with:
