--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -29,6 +29,8 @@ jobs:
     
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
         env:
           # This is where you will need to introduce the Snyk API token created with your Snyk account
