--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -58,7 +58,7 @@ jobs:
         run: docker build -t aptrs .
         # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
       - name: Snyk Container monitor
-        run: SNYK_TOKEN=${{ secrets.SNYK_TOKEN }} snyk container monitor your/image-to-test --file=
+        run: SNYK_TOKEN=${{ secrets.SNYK_TOKEN }} snyk container monitor -t aptrs . --file=
         continue-on-error: true
 
         # Push the Snyk Code results into GitHub Code Scanning tab
