--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -45,6 +45,7 @@ jobs:
           # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
           # You can also omit the token and run the tools that support default configurations
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          directory: APTRS
           verbose: true
           output: results.sarif
           format: sarif
