updated filter only works with full strings

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,36 @@ APTRS/static/rest_framework/**
 
 .vscode/*
 APTRS.code-workspace
+
+
+
+
+### Frontend
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+#/build   -
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
