--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,19 +18,19 @@ services:
 
 
 
-  #postgres:
-   # image: "postgres:latest"
-    #restart: always
-    #volumes:
-    #  - $HOME/APTRS/postgresql_data:/var/lib/postgresql
-    #environment:
-     # - POSTGRES_USER=aptrsdbuser
-      #- POSTGRES_PASSWORD=aptrsdbpassword
-      #- POSTGRES_DB=aptrs
-    #ports:
-     # - "5432:5432"
-    #networks:
-     #   - aptrs
+  postgres:
+    image: "postgres:latest"
+    restart: always
+    volumes:
+      - $HOME/APTRS/postgresql_data:/var/lib/postgresql
+    environment:
+      - POSTGRES_USER=aptrsdbuser
+      - POSTGRES_PASSWORD=aptrsdbpassword
+      - POSTGRES_DB=aptrs
+    ports:
+     - "5432:5432"
+    networks:
+       - aptrs
         
       
   aptrs:
@@ -42,7 +42,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-       - POSTGRES=False
+       - POSTGRES=True
     volumes:
       - $HOME/aptrs:/home/aptrs/.aptrs
       - static_volume:/home/aptrs/APTRS/static/
@@ -51,10 +51,10 @@ services:
     networks:
       - aptrs
 
-    #depends_on:
-    #  - postgres
-    #links:
-    #  - "postgres"
+    depends_on:
+      - postgres
+    links:
+      - "postgres"
 networks:
   aptrs:
 
