--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,12 @@ on:
      branches: ["main", "API"]
 
 jobs:
+  
   semgrep:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     # User definable name of this GitHub Actions job.
     name: semgrep/ci 
     # If you are self-hosting, change the following `runs-on` value: 
