--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ whitenoise = "6.6.0"
 htmldocx = "0.0.6"
 docxtpl = "0.16.7"
 redis = "5.0.1"
+psycopg2 = "2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
